tests/should_fail/syntax_foreach_non_list.nv
module main

// SHOULD FAIL: foreach over a non-list (Int)
fn test() {
    for x in 42 {
        println(x)
    }
}
test()
